# we-help-deep-learning

./: .gitignore  README.md
cdk/: app.py  cdk.context.json  test_stack.sh
cdk/cdk/: cdk_stack.py
phase1/week-2/: README.md  graphic_process.py
phase1/week-3/: neural_network.py
phase1/week-4/: ross_function.py
phase1/week-5/: backpropagation.py
phase1/week-6/: prediction.py
phase2/: ckip_token.py  classification_finetune.py  classification_model.py  doc2vec_model.py
phase2/data/: cleaned_data.csv  tokenized_data.csv
phase2/week-1/: ptt_crawler.py
phase3/: letter_digit_cnn.py
phase3/handwriting/: README.md  evaluate_model.py  letter_digit_cnn.py
phase3/object_detection/: README.md  dataset.py  evaluate.py  model.py  requirements.txt  train.py
phase3/text_generator/: ancient_chinese_transformer.py
phase3/text_generator/models/: ancient_chinese_transformer.pth  tokenizer.json
prediction_app/: README.md  pyproject.toml
prediction_app/app/: main.py  model.py  user-labeled-titles.csv
prediction_app/app/models/: classifier_model.pth
prediction_app/app/templates/: index.html
week-1/: asus_parse.py
week-2/: graphic_process.py
week-6/: README.md  prediction.py  pytorch_practice.py
week-7/: pytorch_prediction.py
